k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: kube-google-cloud
  name: kube-google-cloud
spec:
  replicas: 2
  selector:
    matchLabels:
      run: kube-google-cloud
  template:
    metadata:
      labels:
        run: kube-google-cloud
    spec:
      containers:
      - image: gcr.io/august-sandbox-284023/kube-google-cloud:latest
        name: kube-google-cloud
        ports:
        - containerPort: 80
