k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kube-google-cloud-svc
spec:
  selector:
     run: kube-google-cloud
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort
